dnl Process this file with autoconf to produce a configure script.
AC_INIT(ftpclass.cc)
AC_CONFIG_HEADER(config.h)

VERSION=0.10.0

AC_DEFINE_UNQUOTED(VERSION,"$VERSION")
AC_SUBST(VERSION)

LIBOBJS=''
AC_SUBST(LIBOBJS)

test -z "$CFLAGS" && CFLAGS=""
test -z "$CXXFLAGS" && CXXFLAGS=""

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

CXXLD='$(CXX)'
AC_SUBST(CXXLD)

test x$ac_cv_prog_gcc = xyes && CFLAGS="$CFLAGS -Wall"
if test x$ac_cv_prog_gxx = xyes
then
   CXXFLAGS="$CXXFLAGS -Wall"
#   CXXLD="gcc"
fi

dnl Checks for libraries.
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(dl, main)
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(resolv, res_init)

AC_SUBST(READLINE_SUPPLIB)
AC_CHECK_LIB(curses, doupdate,
   [
      READLINE_SUPPLIB=-lcurses
   ],
   [
      AC_CHECK_LIB(termcap, tgetent,
	 [
	    READLINE_SUPPLIB=-ltermcap
	 ])
   ])

READLINE_CHECK

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h arpa/ftp.h stdlib.h varargs.h\
	         string.h dirent.h sys/ptem.h sys/pte.h sys/stream.h termcap.h\
		 termios.h termio.h sys/select.h locale.h)
AC_CHECK_HEADER(sys/file.h, ,AC_DEFINE(NO_SYS_FILE))
AC_HEADER_TIME

AC_MSG_CHECKING(TIOCGWINSZ in sys/ioctl.h)
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/ioctl.h>],
   [int x = TIOCGWINSZ;],
   AC_DEFINE(GWINSZ_IN_SYS_IOCTL) AC_MSG_RESULT(yes),
   AC_MSG_RESULT(no))

AC_MSG_CHECKING(programs able to redeclare getpw functions)
AC_TRY_COMPILE([
#include <sys/types.h>
#include <pwd.h>
extern struct passwd *getpwuid();],
   [struct passwd *z; z = getpwuid(0);],
   AC_MSG_RESULT(yes),
   AC_DEFINE(HAVE_GETPW_DECLS) AC_MSG_RESULT(no))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_PID_T
AC_STRUCT_TM

AC_STRUCT_TIMEZONE

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd mktime strdup strerror strstr poll hstrerror strcasecmp\
   lstat putenv setenv select)

if test x$ac_cv_func_poll = xno
then
   CFLAGS="$CFLAGS -Ipoll"
   LIBOBJS="$LIBOBJS poll.o"
fi

BASH_SIGNAL_CHECK

AC_OUTPUT(Makefile readline/Makefile)
